# FUP

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  WORKSPACE  main.c  main.cpp
core/: BUILD  connection.cpp  connection.hpp  core.cpp  core.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp
core/entity/: BUILD  entity.hpp  header.cpp  header.hpp  metadata.cpp  metadata.hpp  package.cpp  package.hpp  packet.cpp  packet.hpp  request.cpp  request.hpp  response.cpp  response.hpp  serializable.hpp  serializer.cpp  serializer.hpp
core/helper/: checksum.cpp  constants.hpp  helper.hpp  serializer.cpp  socket_singleton_factory.cpp
core/interface/: checksum.hpp  interface.hpp
core/service/: BUILD  blake3_checksum.cpp  blake3_checksum.hpp  imports.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp  service.hpp
core/service/interface/: checksum.hpp  constants.hpp
core/transmission/: receiver_base.hpp  sender_base.hpp  transmission.hpp
facade/: BUILD  client.cpp  client.hpp  combined_manager.hpp  connection_manager.cpp  connection_manager.hpp  server.cpp  server.hpp
facade/client/: client.cpp  client.hpp
facade/helper/: BUILD  connection_factory.cpp  connection_factory.hpp  helper.hpp  socket_factory.cpp  socket_factory.hpp
facade/manager/: BUILD  connection_manager.cpp  connection_manager.hpp  file_manager.cpp  file_manager.hpp  upload_download_manager.cpp  upload_download_manager.hpp
facade/server/: server.cpp  server.hpp
fup/abstraction/: receiver.hpp  sender.hpp  serializable.hpp
fup/entity/: entity.hpp  header.cpp  header.hpp  metadata.cpp  metadata.hpp  packet.cpp  packet.hpp
fup/helper/: helper.hpp  serializer.cpp
include/: Client.hpp  Common.hpp  Communications.hpp  Message.hpp  Server.hpp  Socket.hpp  Threadpool.hpp  Utils.hpp  fup.h
include/fup/: client.h  common.h  message.h  server.h
src/: Connection.cpp  Connection.hpp  Threadpool.cpp  Threadpool.hpp  client.c  client.cpp  client.hpp  common.hpp  connection.cpp  connection.hpp  message.c  message.hpp  server.cpp  server.hpp  sync_writer.hpp  thread_pool.cpp  thread_pool.hpp
src/client/: Client.cpp  ClientStatic.cpp  ClientTcp.cpp  ClientUdp.cpp
src/common/: Communications.cpp  Message.cpp  Socket.cpp  Threadpool.cpp  Utils.cpp
src/fup/: client.cpp  client.hpp  common.hpp  connection.cpp  connection.hpp  message.hpp  server.hpp
src/server/: Server.cpp
tests/: test.c
